REGRESSION (r25430): Fix -Wstring-concatenation warning from open source clang <https://webkit.org/b/217884>

Reviewed by Alexey Proskuryakov.

* WebView/WebPreferences.mm:
(cacheModelForMainBundle):
- Add missing comma to fix unwanted string concatenation.


Canonical link: https://commits.webkit.org/230610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268652 268f45cc-cd09-0410-ab3c-d52691b4dbfc